--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -168,6 +168,9 @@ Name & \ Default & \ CMA-ES &  Transferer & ANN \\
 Freecell & ~0 -- ~9& 64 -- 66  & 18 -- ~8  & 18 -- 17     \\
 Grid & ~2 -- 24 & 66 -- ~60  & 16 -- 11 & 17 -- ~5  &    \\
 Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
+Parking &  ~0 -- 12 & 68 -- 65  &  15 -- 14   & 17 -- 9   &    \\
+
+
 \hline
 \end{tabular}
 \caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurrences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
